feat: add basic functions of index
